--- a/about.html
+++ b/about.html
@@ -16,12 +16,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>About [YOUR NAME]</title>
+    <title>About Gretha Gall</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">[YOUR NAME]</a>
+        <a class="navbar-brand" href="index.html">Gretha Gall</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -49,7 +49,7 @@
       </div>
     </nav>
     <h1 class="text-center">About me</h1>
-    <h3 class="text-center">Front-end developer from [YOUR LOCATION]</h3>
+    <h3 class="text-center">Front-end developer from Vienna, Austria</h3>
     <div class="about-paragraphs text-center">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -61,19 +61,30 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="https://uploads.codesandbox.io/uploads/user/536b9ee2-9d41-444a-a85a-62ae77e381ac/l3jP-yoga.png"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="https://uploads.codesandbox.io/uploads/user/536b9ee2-9d41-444a-a85a-62ae77e381ac/jxM9-weather.png"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="https://uploads.codesandbox.io/uploads/user/536b9ee2-9d41-444a-a85a-62ae77e381ac/WgM8-yogurt.png"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
       </div>
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:[YOUR EMAIL]" class="email-link"> [YOUR EMAIL] </a>
+      <a href="mailto:gretha.gall@gmail.com" class="email-link">
+        gretha.gall@gmail.com
+      </a>
     </div>
   </body>
 </html>
