--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[YOUR NAME]</title>
+    <title>Gretha Gall</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">[YOUR NAME]</a>
+        <a class="navbar-brand" href="index.html">Gretha Gall</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -51,8 +51,8 @@
       </div>
     </nav>
     <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">[YOUR NAME]</h1>
-    <h3 class="text-center">Front-end developer, based in [YOUR LOCATION]</h3>
+    <h1 class="text-center">Gretha Gall</h1>
+    <h3 class="text-center">Front-end developer, based in Europe</h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="primary-link">Contact me</a>
       <a href="about.html" class="secondary-link">About me</a>
@@ -60,7 +60,10 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="https://uploads.codesandbox.io/uploads/user/536b9ee2-9d41-444a-a85a-62ae77e381ac/l3jP-yoga.png"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -89,12 +92,18 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="https://uploads.codesandbox.io/uploads/user/536b9ee2-9d41-444a-a85a-62ae77e381ac/jxM9-weather.png"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="https://uploads.codesandbox.io/uploads/user/536b9ee2-9d41-444a-a85a-62ae77e381ac/WgM8-yogurt.png"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
