--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gretha Gall</title>
+    <title>Front-end developer - Gretha Gall</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -59,10 +59,11 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-6 d-none d-sm-block">
           <img
             src="https://uploads.codesandbox.io/uploads/user/536b9ee2-9d41-444a-a85a-62ae77e381ac/l3jP-yoga.png"
             class="img-fluid rounded"
+            alt="Yoga-img"
           />
         </div>
         <div class="col-6">
@@ -91,18 +92,20 @@
             <a href="#" class="primary-link">Launch Weather App</a>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-6 d-none d-sm-block">
           <img
             src="https://uploads.codesandbox.io/uploads/user/536b9ee2-9d41-444a-a85a-62ae77e381ac/jxM9-weather.png"
             class="img-fluid rounded"
+            alt="weather-img"
           />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-6 d-none d-sm-block">
           <img
             src="https://uploads.codesandbox.io/uploads/user/536b9ee2-9d41-444a-a85a-62ae77e381ac/WgM8-yogurt.png"
             class="img-fluid rounded"
+            alt="yogurt-img"
           />
         </div>
         <div class="col-6">
@@ -114,7 +117,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link last-link">Launch Weather App</a>
           </div>
         </div>
       </div>
